# models/comment.js
@@ -17,7 +17,6 @@ const CommentSchema = new Schema({
   },
   asset_id: String,
   author_id: String,
-  username: String,
   status: {
     type: String,
     enum: ['accepted', 'rejected', ''],
@@ -32,26 +31,14 @@ const CommentSchema = new Schema({
 });
 
 //==============================================================================
-// New Statics
-//==============================================================================
-
-/**
- * Create a comment.
- * @param {String} body  content of comment
-*/
-CommentSchema.statics.new = function(body, author_id, asset_id, parent_id, status, username) {
-  let comment  = new Comment({body, author_id, asset_id, parent_id, status, username});
-  return comment.save();
-};
-
-//==============================================================================
 // Find Statics
 //==============================================================================
 
 /**
  * Finds a comment by the id.
  * @param {String} id  identifier of comment (uuid)
-*/
+ * @return {Promise}
+ */
 CommentSchema.statics.findById = function(id) {
   return Comment.findOne({'id': id});
 };
@@ -59,7 +46,8 @@ CommentSchema.statics.findById = function(id) {
 /**
  * Finds ALL the comments by the asset_id.
  * @param {String} asset_id  identifier of the asset which owns this comment (uuid)
-*/
+ * @return {Promise}
+ */
 CommentSchema.statics.findByAssetId = function(asset_id) {
   return Comment.find({asset_id});
 };
@@ -68,7 +56,8 @@ CommentSchema.statics.findByAssetId = function(asset_id) {
  * Finds the accepted comments by the asset_id.
  *  get the comments that are accepted.
  * @param {String} asset_id  identifier of the asset which owns the comments (uuid)
-*/
+ * @return {Promise}
+ */
 CommentSchema.statics.findAcceptedByAssetId = function(asset_id) {
   return Comment.find({asset_id: asset_id, status:'accepted'});
 };
@@ -76,7 +65,8 @@ CommentSchema.statics.findAcceptedByAssetId = function(asset_id) {
 /**
  * Finds the new and accepted comments by the asset_id.
  * @param {String} asset_id  identifier of the asset which owns the comments (uuid)
-*/
+ * @return {Promise}
+ */
 CommentSchema.statics.findAcceptedAndNewByAssetId = function(asset_id) {
   return Comment.find({asset_id: asset_id, status: {'$in': ['accepted', '']}});
 };
@@ -84,7 +74,8 @@ CommentSchema.statics.findAcceptedAndNewByAssetId = function(asset_id) {
 /**
  * Find comments by an action that was performed on them.
  * @param {String} action_type the type of action that was performed on the comment
-*/
+ * @return {Promise}
+ */
 CommentSchema.statics.findByActionType = function(action_type) {
   return Action
     .findCommentsIdByActionType(action_type, 'comment')
@@ -99,50 +90,54 @@ CommentSchema.statics.findByActionType = function(action_type) {
  * Find not moderated comments by an action that was performed on them.
  * @param {String} action_type the type of action that was performed on the comment
  * @param {String} status the status of the comment to search for
-*/
+ * @return {Promise}
+ */
 CommentSchema.statics.findByStatusByActionType = function(status, action_type) {
   return Action
     .findCommentsIdByActionType(action_type, 'comment')
     .then((actions) => {
-
       return Comment.find({
-        'status': status,
-        'id': {
-          '$in': actions.map(a => {
-            return a.item_id;
-          })
+        status: status,
+        id: {
+          $in: actions.map(a => a.item_id)
         }
       });
-
     });
 };
 
 /**
  * Find comments by their status.
  * @param {String} status the status of the comment to search for
-*/
+ * @return {Promise}
+ */
 CommentSchema.statics.findByStatus = function(status) {
-  return Comment.find({'status': status});
+  return Comment.find({
+    status: status === 'new' ? '' : status
+  });
 };
 
 /**
  * Find comments that need to be moderated (aka moderation queue).
  * @param {String} moderationValue pre or post moderation setting. If it is undefined then look at the settings.
-*/
+ * @return {Promise}
+ */
 CommentSchema.statics.moderationQueue = function(moderation) {
   switch(moderation){
+
   // Pre-moderation:  New comments are shown in the moderator queues immediately.
   case 'pre':
     return Comment.findByStatus('').then((comments) => {
       return comments;
     });
+
   // Post-moderation: New comments do not appear in moderation queues unless they are flagged by other users.
   case 'post':
     return Comment.findByStatusByActionType('', 'flag').then((comments) => {
       return comments;
     });
+
   default:
-    throw new Error('Moderation setting not found.');
+    return Promise.reject(Error('Moderation setting not found.'));
   }
 };
 
@@ -154,16 +149,18 @@ CommentSchema.statics.moderationQueue = function(moderation) {
  * Change the status of a comment.
  * @param {String} id  identifier of the comment  (uuid)
  * @param {String} status the new status of the comment
-*/
+ * @return {Promise}
+ */
 CommentSchema.statics.changeStatus = function(id, status) {
-  return Comment.findOneAndUpdate({'id': id}, {$set: {'status': status}}, {upsert: false, new: true});
+  return Comment.findOneAndUpdate({'id': id}, {$set: {'status': status}});
 };
 
 /**
  * Add an action to the comment.
  * @param {String} id  identifier of the comment  (uuid)
  * @param {String} action the new action to the comment
-*/
+ * @return {Promise}
+ */
 CommentSchema.statics.addAction = function(id, user_id, action_type) {
   // check that the comment exist
   let action  = new Action({
@@ -183,7 +180,8 @@ CommentSchema.statics.addAction = function(id, user_id, action_type) {
  * Change the status of a comment.
  * @param {String} id  identifier of the comment  (uuid)
  * @param {String} status the new status of the comment
-*/
+ * @return {Promise}
+ */
 CommentSchema.statics.removeById = function(id) {
   return Comment.remove({'id': id});
 };
@@ -193,7 +191,8 @@ CommentSchema.statics.removeById = function(id) {
  * @param {String} id  identifier of the comment  (uuid)
  * @param {String} action_type the type of the action to be removed
  * @param {String} user_id the id of the user performing the action
-*/
+ * @return {Promise}
+ */
 CommentSchema.statics.removeAction = function(item_id, user_id, action_type) {
   return Action.remove({
     action_type,
@@ -203,6 +202,15 @@ CommentSchema.statics.removeAction = function(item_id, user_id, action_type) {
   });
 };
 
+/**
+ * Returns all the comments in the collection.
+ * @return {Promise}
+ */
+CommentSchema.statics.all = () => {
+  return Comment.find();
+};
+
+// Comment model.
 const Comment = mongoose.model('Comment', CommentSchema);
 
 module.exports = Comment;
